perf: 优化组件位置

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -60,7 +60,7 @@
         <a style="width: 100%; color: red;" v-show="register.password2Tip">密码不一致</a>
         <input @click="registerFunc" @keyup.enter="registerFunc" class="btn" type="submit" value="注册并登录">
         <a @click="registerPage=false" class="registerShow" href="javascript:void(0)"
-           style="margin-top: 48px;">返回</a>
+           style="width: 100%; color: #0d00bd;text-align: right;text-decoration: none;">返回</a>
     </div>
 </div>
 <script src="./js/index.js"></script>
